--- a/src/feature/video/components/share-indication.scss
+++ b/src/feature/video/components/share-indication.scss
@@ -19,6 +19,10 @@
     align-items: center;
     height: 100%;
     border-bottom-left-radius: 6px;
+    font-size: 14px;
+    line-height: 1.5;
+    letter-spacing: 0.02rem;
+
     .anticon {
       path {
         fill:#000;
@@ -46,7 +50,7 @@
     background: rgba(17, 17, 17, 0.8);
     max-height: 500px;
     overflow: auto;
- 
+
   .ant-dropdown-menu-item {
     padding: 5px 30px;
     color: #ccc;
