--- a/src/feature/video/components/video-footer.scss
+++ b/src/feature/video/components/video-footer.scss
@@ -7,51 +7,116 @@
 }
 .vc-button {
   font-size: 30px;
-  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right:min(30px,1vw);
-  width: 60px !important;
-  height: 60px !important;
-  > *{
-    font-size: 28px !important;
+  width: 42px!important;
+  height: 42px!important;
+
+  > * {
+    font-size: 18px !important;
   }
-  &.active {
-    color: #00cc64;
+
+  &.new-message:after {
+    content: ".";
+    color: #ff3b3b;
+    font-size: 80px;
+    line-height: 1;
+    position: absolute;
+    top: -50px;
+    right: 3px;
   }
- 
+
+  &.ant-btn-background-ghost {
+    &.leave-btn {
+      background-color: #ea4335;
+      border-color: #ea4335;
+
+      &:hover {
+        background-color: #fa6458;
+        border-color: #fa6458;
+      }
+    }
+
+    &:hover {
+      border-color: #595e62;
+      background-color: #595e62;
+    }
+  }
 }
-.vc-dropdown-button {
-  border-radius: 20px;
-  border: 1px solid #fff;
-  width: 70px;
-  display: flex;
-  justify-content: center;
-  margin-right:min(30px,1vw);
-  > .ant-btn {
-    font-size: 30px;
+
+.vc-button.ant-btn-background-ghost,
+.vc-dropdown-button > .ant-btn  {
+  background-color: #3c4043;
+  border-color: #3c4043;
+
+  .anticon {
     color: #fff;
+  }
+}
+
+.vc-dropdown-button,
+.vc-dropdown-button .ant-dropdown-button {
+  border-radius: 20px;
+  background-color: #3c4043;
+  border-color: #3c4043;
+  width: 54px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right:min(30px,1vw);
+  padding: 0px 8px;
+  height: 42px;
+
+  > .ant-btn {
     display: flex;
-    height: 60px !important;
+    height: 32px !important;
     align-items: center;
     border-width: 0 !important;
     padding: 0;
     margin-right: 5px;
+
     &:hover {
-      color: #40a9ff;
+      .anticon {
+        color: #40a9ff;
+      }
     }
   }
+
   > .ant-btn[disabled]{
     background: transparent;
     color: #999;
   }
+
   > .ant-dropdown-trigger {
     width: 20px !important;
     margin-right: 0;
-    margin-left: 3px;
+
+    .anticon-up {
+      width: 100%;
+      font-size: 12px;
+      justify-content: flex-end
+    }
+  }
+
+  > .ant-dropdown-button {
+    width: 100%;
+    padding-left: 0;
+  }
+
+  &.leave-dropdown {
+    .ant-btn {
+      background-color: transparent;
+    }
+
+    &, & > .ant-dropdown-button {
+      background-color: #ea4335;
+    }
+
   }
 }
+
 .vc-dropdown-menu {
   border: 1px solid #747487;
   background: rgba(0, 0, 0, 0.9) !important;
