--- a/src/feature/video/video.scss
+++ b/src/feature/video/video.scss
@@ -3,7 +3,7 @@
   padding: 5vh 0 10vh;
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 150px);
   background-color: #000;
   display: flex;
   overflow: hidden;
